@startuml
!include DiagramaClase_Evento.puml!SINSUBCLASES
DescuentoPorcentaje ..|> Evento
AumentoPorcentaje ..|> Evento
Penalizacion ..|> Evento

class DescuentoPorcentaje{
    - porcentaje: Integer
    + aplicarModificador( Movimiento m ): Movimiento
}
class AumentoPorcentaje{
    - porcentaje: Integer
    + aplicarModificador( Movimiento m ): Movimiento
}
class Penalizacion{
    - cantidad: Integer
    + aplicarModificador( Movimiento m ): Movimiento
}
@enduml

@startuml(id=SINSUBCLASES)
interface Evento{
    + {abstract} aplicarModificador( Movimiento m ): Movimiento
}

note left
Es un metodo que recibe un Movimiento
y devuelve el Movimiento resultante de
aplicarle un "modificador".
end note


@enduml